# nitro

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
examples/: example_advanced.py  test_autocomplete.py
src/: bindings.cpp  nitro_sim.pyi  pettingzoo_env.py
src/nitro_sim/: __init__.py
tests/: conftest.py  test_arena.py  test_game_types.py  test_math_types.py  test_pettingzoo_api.py
