[project]
name = "nitro-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron Davis", email = "52721338+2ToTheNthPower@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nitro-sim = "nitro_sim:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
